# test-github-actions

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  test.yml
test_package/: __init__.py  simple_math.py
tests/: test_math.py
